welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage())
	if (litMessage()=="R") {droite() ; avance();}
	else if (litmessage()=="L") {gauche() ; avance();}
	else if (litmessage()=="I") { gauche() ; gauche() ; avance();}
	else if (litmessage()=="A") { avance();}
	else if (litmessage()=="B") {avance() ; avance();}
	else if (litmessage()=="C") {avance() ; avance() ; avance();}
	else if (litmessage()=="Z") {recule();}
	else if (litmessage()=="Y") {recule() ; recule();}
	else if (litmessage()=="X") {recule() ; recule() ; recule();}